--- a/EMSYS/Resources/Resource.ar.resx
+++ b/EMSYS/Resources/Resource.ar.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -264,14 +264,14 @@
   <data name="ContinueExam" xml:space="preserve">
     <value>استمر في الامتحان</value>
   </data>
-  <data name="Country" xml:space="preserve">
-    <value>دولة</value>
+  <data name="Governate" xml:space="preserve">
+    <value>محافظة</value>
   </data>
-  <data name="CountryNotFound" xml:space="preserve">
-    <value>البلد غير موجود.</value>
+  <data name="GovernateNotFound" xml:space="preserve">
+    <value>المحافظة غير موجودة.</value>
   </data>
-  <data name="CountryRequired" xml:space="preserve">
-    <value>حقل البلد مطلوب.</value>
+  <data name="GovernateRequired" xml:space="preserve">
+    <value>حقل المحافظة مطلوب.</value>
   </data>
   <data name="CreatedBy" xml:space="preserve">
     <value>انشأ من قبل</value>
