--- a/EMSYS/Resources/Resource.resx
+++ b/EMSYS/Resources/Resource.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -261,14 +261,14 @@
   <data name="ContinueExam" xml:space="preserve">
     <value>Continue Exam</value>
   </data>
-  <data name="Country" xml:space="preserve">
-    <value>Country</value>
+  <data name="Governate" xml:space="preserve">
+    <value>Governate</value>
   </data>
-  <data name="CountryNotFound" xml:space="preserve">
-    <value>Country not found.</value>
+  <data name="GovernateNotFound" xml:space="preserve">
+    <value>Governate not found.</value>
   </data>
-  <data name="CountryRequired" xml:space="preserve">
-    <value>The Country field is required.</value>
+  <data name="GovernateRequired" xml:space="preserve">
+    <value>The Governate field is required.</value>
   </data>
   <data name="CreatedBy" xml:space="preserve">
     <value>Created By</value>
@@ -1226,5 +1226,8 @@
   </data>
   <data name="YourTopExamsThatNeedImprovement" xml:space="preserve">
     <value>Your Top 5 Exams That Need Improvement</value>
+  </data>
+  <data name="ConfigurationError" xml:space="preserve">
+    <value>Configuration Error</value>
   </data>
 </root>
